# SentinelAI_V3

./: .env.example  .gitignore  README.md  compile-protos.ps1  compile-protos.sh  login.json.example  register.json.example  test_all.py  test_auth.py  test_auth_full.py  test_register.py
.github/workflows/: agent-build.yml  backend-ci.yml  desktop-build.yml  microservices-ci.yml  panel-ci.yml
agent/: Cargo.toml  agent.toml
agent/src/: detection.rs  executor.rs  firewall.rs  main.rs
assets/demo/: .gitkeep
backend/: pyproject.toml  reset_admin.py
backend/alembic/versions/: 2026_06_17_0000-0004_unique_firewall_rule_name.py
backend/app/: main.py
backend/app/api/routes/: firewall.py  remediation.py
backend/app/core/: config.py
backend/app/models/: firewall.py
backend/app/schemas/: auth.py
backend/app/services/: firewall_service.py
backend/scripts/: check_agents.py  quick_check.py  test_agents.py  verify_auth_local.py
panel/: package-lock.json  package.json  tsconfig.tsbuildinfo
panel/src/app/(authenticated)/firewall/: page.tsx
scripts/: gen_agents.py  gen_analysis.py  gen_executor.py  gen_fix_analysis.py  gen_frontend.py  gen_frontend2.py  gen_llm_engine.py  gen_main.py  gen_main_update.py  gen_osint_routes.py  gen_osint_service.py  gen_transport.py
