[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
description = "SentinelAI Endpoint Agent — Cross-platform security telemetry collector"
license = "MIT"

[[bin]]
name = "sentinel-agent"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.38"

# File system watching
notify = "8"
regex = { version = "1", features = ["std"] }

# HTTP client for backend communication
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "1.1"
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing (file integrity)
sha2 = "0.11"
hex = "0.4"

# HMAC for command signing verification
hmac = "0.13"

# UUID for event IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# OS-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_System_Rpc",
    "Win32_Foundation",
    "Win32_Security",
]}
windows-service = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["net", "process", "signal"] }

[profile.release]
opt-level = "z"     # Optimize for binary size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip debug symbols
panic = "abort"      # Abort on panic (smaller binary)
