[project]
name = "sentinelai-backend"
version = "0.1.0"
description = "SentinelAI EDR Backend — AI-Powered Endpoint Detection & Response"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SentinelAI Team" }]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.18.4",

    # Redis
    "redis[hiredis]>=5.0.0",

    # Elasticsearch
    "elasticsearch[async]>=8.12.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # LLM / AI
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.1.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.0",
    "aiosmtplib>=2.0",

    # HTTP Client
    "httpx>=0.26.0",

    # Validation & Serialization
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Utilities
    "python-dateutil>=2.8.2",
    "structlog>=24.1.0",
    "orjson>=3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101"]  # Allow assert in tests

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
